--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -1,4 +1,5 @@
 name: what_time_is_it
+run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
 
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -12,16 +13,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    # The type of runner that the job will run on
-    # runs-on: epitechcontent/epitest-docker
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Print the result of date
-        run: date
+  - name: Run the date command
+  - run: date
 
