--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -13,7 +13,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  - runs-on: epitechcontent/epitest-docker
+  - runs-on: ubuntu-latest
   - name: Run the date command
   - run: date
 
