--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -5,8 +5,6 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,5 +15,6 @@ jobs:
     - runs-on: ubuntu-latest
     - steps:
       - name: Run the date command
-      - run: date
+      - run: |
+        date
 
