Update tests date workfolow

--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -15,6 +15,5 @@ jobs:
     - runs-on: ubuntu-latest
     - steps:
       - name: Run the date command
-      - run: |
-        echo "Hello World"
+      - run: echo "Hello World"
 
