--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -11,9 +11,9 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  - build:
-    - runs-on: ubuntu-latest
-    - steps:
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name: Run the date command
-      - run: echo "Hello World"
+        run: echo "Hello World"
 
