--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -14,6 +14,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Run the date command
+      - name: Print "Hello world"
         run: echo "Hello World"
+      - name: Print the date
+        run: date
 
