--- a/.github/workflows/what_time_is_it.yml
+++ b/.github/workflows/what_time_is_it.yml
@@ -12,7 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    runs-on: epitechcontent/epitest-docker
+    runs-on: ubuntu-latest
     steps:
       - name: Print "Hello world"
         run: echo "Hello World"
