--- a/.github/workflows/repository_size.yml
+++ b/.github/workflows/repository_size.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          ref: main
+          repository: EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-thomas.boue
       - name: List files in repo
         run: ls
 
