--- a/.github/workflows/repository_size.yml
+++ b/.github/workflows/repository_size.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-thomas.boue
+          token: ${{ secrets.PAT }}
       - name: List files in repo
         run: ls
 
