--- a/.github/workflows/repository_size.yml
+++ b/.github/workflows/repository_size.yml
@@ -21,5 +21,6 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: List files in repo
         run: |
-          ls
+          cd B-DOP-200-NAN-2-1-bschocolatine-thomas.boue
+          ls -la
           pwd
