--- a/.github/workflows/repository_size.yml
+++ b/.github/workflows/repository_size.yml
@@ -21,5 +21,4 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: List files in repo
         run: |
-          ls -la
-          pwd
+          echo "git branch"
