--- a/.github/workflows/repository_size.yml
+++ b/.github/workflows/repository_size.yml
@@ -21,4 +21,4 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: List files in repo
         run: |
-          echo $git branch
+          echo "${git branch}"
