--- a/.github/workflows/repository_size.yml
+++ b/.github/workflows/repository_size.yml
@@ -21,3 +21,5 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: List files in repo
         run: echo "Current branch is ${{ github.ref }}"
+      - name: i don't know what it does
+        run: du -skh --exclude=".git"
