--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -11,15 +11,16 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
-  to_codecommit:
+  mirror:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
           with:
-            fetch-depth: 5
+            fetch-depth: 0
         - uses: pixta-dev/repository-mirroring-action@v1
           with:
             target_repo_url:
               git@github.com:EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-thomas.boue.git
             ssh_private_key:
               ${{ secrets.SSH_KEY }}
+# Mettre des names pour que ça soit propre
