:pencil2: Update version of mirroring repo

--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 jobs:
   mirror:
-      name: Mirror to Github
+      - name: Mirror to Github
       runs-on: ubuntu-latest
       steps:
         - name: Checkout
