--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -12,12 +12,10 @@ jobs:
   mirror:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Mirror to Github
-      uses: pixta-dev/repository-mirroring-action@v3
+      - uses: pixta-dev/repository-mirroring-action@v3
         with:
           target_repo_url:
             git@github.com:EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-thomas.boue.git
