--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -10,6 +10,7 @@ on:
   workflow_dispatch:
 jobs:
   mirror:
+    name: Mirror
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
