--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -10,12 +10,14 @@ on:
   workflow_dispatch:
 jobs:
   mirror:
-    name: Mirror
+    name: Mirroring
     runs-on: ubuntu-latest
     steps:
+      name: Checkout
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      name: Mirror
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
