--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -13,8 +13,8 @@ jobs:
     name: Mirroring
     runs-on: ubuntu-latest
     steps:
-      name: Checkout
-      - uses: actions/checkout@v3
+      - name: Checkout
+      uses: actions/checkout@v3
         with:
           fetch-depth: 0
       name: Mirror
