--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -13,12 +13,12 @@ jobs:
     name: Mirroring
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
       - uses: actions/checkout@v3
+        name: Checkout
         with:
           fetch-depth: 0
-      name: Mirror
       - uses: pixta-dev/repository-mirroring-action@v1
+        name: Mirror to GitHub
         with:
           target_repo_url:
             git@github.com:EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-thomas.boue.git
