--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -17,6 +17,7 @@ jobs:
         name: Checkout
         with:
           fetch-depth: 0
+      - run: "ls -la"
       - uses: pixta-dev/repository-mirroring-action@v1
         name: Mirror to GitHub
         with:
