--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -17,7 +17,8 @@ jobs:
         name: Checkout
         with:
           fetch-depth: 0
-      - run: "cat ./.github/workflows/chocolatine.yml"
+      # - run: "cat ./.github/workflows/chocolatine.yml"
+      - run: "ls ./.github/workflows"
       - uses: pixta-dev/repository-mirroring-action@v1
         name: Mirror to GitHub
         with:
