:pencil2: Update version of mirroring repo

--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -17,8 +17,7 @@ jobs:
         name: Checkout
         with:
           fetch-depth: 0
-      # - run: "cat ./.github/workflows/chocolatine.yml"
-      - run: "ls ./.github/workflows"
+      - run: "cat ./.github/workflows/repository_mirroring.yml"
       - uses: pixta-dev/repository-mirroring-action@v1
         name: Mirror to GitHub
         with:
