--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -41,7 +41,7 @@ jobs:
               file_path=$(echo $line | cut -d ':' -f 1)
               error_line=$(echo $line | cut -d ':' -f 2)
               error_code=$(echo $line | cut -d ':' -f 4)
-              echo "::error $file_name $error_line:: $error_type coding style error: $file_name $error_code"
+              echo "::error $error_code::"
           done < $input
 
   # check_program_compilation:
