--- a/.github/workflows/bonus.yml
+++ b/.github/workflows/bonus.yml
@@ -129,5 +129,14 @@ jobs:
 
       - name: Discord notification
         uses: Ilshidur/action-discord@0.3.2
+        organisation=${{ env.MIRROR_URL }} | cut -d ":" -f 2 | cut -d "/" -f 1
+        repository_name=${{ env.MIRROR_URL }} | sed -n 's/^.*\/\([^-]\+-[^-]\+-[^-]\+-[^-]\+-[^-]\+-[^-]\+-[^-]\+\)-.*\.git$/\1/p'
+        repositatoy_owner=${{ env.MIRROR_URL }} | sed -n 's/^.*\/\([^-]\+-[^-]\+-[^-]\+-[^-]\+-[^-]\+-[^-]\+-[^-]\+\)-\(.*\)\.git$/\2/p'
         with:
-          args: "🚀 A push has been deployed to ${{ env.MIRROR_URL }}"
+          args:
+          if [ ${{ github.event_name }} == "push" ]
+          then
+            echo "🚀 A push has been deployed to ${{ env.MIRROR_URL }} by ${{ github.actor }} on branch ${{ github.ref }}"
+          else
+            echo "🚀 A pull request has been deployed to ${{ env.MIRROR_URL }} by ${{ github.actor }} on branch ${{ github.ref }}"
+          fi
