--- a/.github/workflows/bonus.yml
+++ b/.github/workflows/bonus.yml
@@ -126,19 +126,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get commit information
-        id: commit-info
-        run: |
-          commit_name=$(git log -1 --pretty=format:"%s")
-          user_name=$(git log -1 --pretty=format:"%an")
-          orga_name=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
-          repo_name=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)
-          echo "::set-output name=commit::$commit_name"
-          echo "::set-output name=user::$user_name"
-          echo "::set-output name=org::$orga_name"
-          echo "::set-output name=repo::$repo_name"
       - name: Send notification to Discord
-        uses: discord/send-webhook@v1
+        uses: Ilshidur/action-discord@0.3.2
         with:
-          url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          content: "A new commit has been pushed to ${{ steps.commit-info.outputs.org }}/${{ steps.commit-info.outputs.repo }} by ${{ steps.commit-info.outputs.user }}: ${{ steps.commit-info.outputs.commit }}"
+          args: "🚀 ${{ env.run-name }} has been deployed to ${{ inputs.deploy_target }} by @${{ github.actor }}"
