--- a/.github/workflows/bonus.yml
+++ b/.github/workflows/bonus.yml
@@ -130,4 +130,4 @@ jobs:
       - name: Send notification to Discord
         uses: Ilshidur/action-discord@0.3.2
         with:
-          args: "🚀 ${{ env.run-name }} has been deployed to ${{ inputs.deploy_target }} by @${{ github.actor }}"
+          args: "New commit on ${{ github.repository }} by ${{ github.actor }}: ${{ github.event.head_commit.message }}"
