--- a/.github/workflows/bonus.yml
+++ b/.github/workflows/bonus.yml
@@ -130,4 +130,11 @@ jobs:
       - name: Send notification to Discord
         uses: Ilshidur/action-discord@0.3.2
         with:
-          args: "New commit on ${{ github.repository }} by ${{ github.actor }}: ${{ github.event.head_commit.message }}"
+          args:
+          run: |
+            if [ ${{ github.event_name }} == "push" ]
+            then
+              echo "🚀 A push has been deployed to ${{ env.MIRROR_URL }} by ${{ github.actor }} on branch ${{ github.ref }}"
+            else
+              echo "🚀 A pull request has been deployed to ${{ env.MIRROR_URL }} by ${{ github.actor }} on branch ${{ github.ref }}"
+            fi
